--- a/account/style.css
+++ b/account/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
-
+/* 
 *{
     font-family: 'Quicksand', sans-serif;
     box-sizing: border-box;
@@ -108,39 +108,126 @@ button:active{
     background-color: transparent;
     border: 2px solid #fff;
 }
+ */
 
-.container.right-pannel-active.sign_in{
-    transform: translate(100%, 0);
+*{
+    font-family: 'Quicksand', sans-serif;
 }
 
-.container.right-pannel-active.sign_up{
-    transform: translate(-50%, 0);
-    opacity: 1;
-    z-index: 5;
+body{
+    background: linear-gradient(to right, #DCF2F1, #7FC7D9);
 }
 
-.overlay-container{
+canvas{
+    opacity: 0.7;
     position: absolute;
-    top: 0;
+    top: 50%;
     left: 50%;
-    width: 50%;
-    height: 100%;
+    transform: translate(-50%, -50%);
+    width: 530px;
+    height: 530px;
+    z-index: -1;
+}
+
+.container{
     overflow: hidden;
-    transition: transform 0.5s ease;
-    z-index: 100;
+    opacity: 0.9;
+    background-color: #fafafa;
+    border: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    min-width: 500px;
+    height: 500px;
+    min-height: 500px;
+    border-radius: 25px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+    padding: 8px;
 }
 
-.container.right-pannel-active.overlay-container{
-    transform: translate(-100%, 0);
+.stuff{
+    text-align: center;
+    font-weight: 700;
+    font-size: 18px;
 }
 
-.overlay-container{
-    position: relative;
+#log{
+    transform: translate(0, -15px);
+}
+
+.sign_up, .sign_in{
+    text-align: center;
+}
+
+input{
+    margin: 10px;
+    border: none;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    width: 300px;
+    text-align: center;
+    height: 35px;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    transition: transform 100ms ease-out;
+}
+
+input:active{
+    transform: scale(0.95);
+}
+
+#sub-btn{
+    width: 150px;
+    margin: 10px;
+    height: 35px;
+    border: none;
+    border-radius: 15px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    font-weight: 900;
+    background-color: rgba(48, 134, 199, 0.7);
     color: #fff;
-    background: linear-gradient(to right, #7FC7D9, #365486);
-    left: 100%;
-    height: 100%; 
-    width: 200%;
-    transform: translate(0, 0);
-    transition: transform 0.5s ease;
+    transition: transform 100ms ease-out;
+    margin-bottom: 5px;
+}
+
+#sub-btn:hover{
+    background-color: rgba(48, 134, 199, 1);
+    cursor: pointer;
+}
+
+#sub-btn:active{
+    transform: scale(0.95);
+}
+
+.social_sign_in a, .social_sign_up a{
+    margin: 10px;
+    font-size: 26px;
+}
+
+.other_side a, .email_sign_in a, .email_sign_up a{
+    text-decoration: none;
+    color: #0F1035;
+}
+
+p{
+    margin-top: 5px;
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.other_side, .email_sign_in, .email_sign_up{
+    text-align: center;
+    margin: 15px;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 0.7px;
+}
+
+.other_side a:visited{
+    color: #000;
 }
